// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AssertionError 1`] = `
{
  "code": "ERR_ASSERTION",
  "debug": {
    "actual": false,
    "expected": true,
    "generatedMessage": false,
    "operator": "==",
  },
  "message": "asserting false",
  "name": "AssertionError",
  "stack": Any<String>,
}
`;

exports[`CustomError with CustomError cause 1`] = `
{
  "cause": [
    {
      "debug": {
        "debug": {
          "woo1": "woo1",
        },
        "status": {
          "id": 2,
          "status": "UNKNOWN",
        },
      },
      "message": "previous",
      "name": "Error",
      "stack": Any<String>,
    },
  ],
  "debug": {
    "woo2": "woo2",
  },
  "message": "current",
  "name": "Error",
  "stack": Any<String>,
  "status": {
    "id": 2,
    "status": "UNKNOWN",
  },
}
`;

exports[`URLError 1`] = `
{
  "code": "ERR_INVALID_URL",
  "debug": {
    "base": "lol",
    "input": "/",
  },
  "message": "Invalid URL",
  "name": "TypeError",
  "stack": Any<String>,
}
`;

exports[`dont explode on primitives: 0 1`] = `
{
  "debug": {
    "err": "0",
    "typeofErr": "number",
  },
  "message": "0",
  "name": "Error",
}
`;

exports[`dont explode on primitives: 0n 1`] = `
{
  "debug": {
    "err": "0",
    "typeofErr": "bigint",
  },
  "message": "0",
  "name": "Error",
}
`;

exports[`dont explode on primitives: Symbol(kaboom) 1`] = `
{
  "debug": {
    "err": "Symbol(kaboom)",
    "typeofErr": "symbol",
  },
  "message": "Symbol(kaboom)",
  "name": "Error",
}
`;

exports[`dont explode on primitives: false 1`] = `
{
  "debug": {
    "err": "false",
    "typeofErr": "boolean",
  },
  "message": "false",
  "name": "Error",
}
`;

exports[`dont explode on primitives: null 1`] = `
{
  "debug": {
    "err": "null",
    "typeofErr": "object",
  },
  "message": "null",
  "name": "Error",
}
`;

exports[`dont explode on primitives: string 1`] = `
{
  "debug": {
    "err": "string",
    "typeofErr": "string",
  },
  "message": "string",
  "name": "Error",
}
`;

exports[`dont explode on primitives: undefined 1`] = `
{
  "debug": {
    "err": "undefined",
    "typeofErr": "undefined",
  },
  "message": "undefined",
  "name": "Error",
}
`;

exports[`dont explode on voids: null 1`] = `
{
  "debug": {
    "err": "null",
    "typeofErr": "object",
  },
  "message": "null",
  "name": "Error",
}
`;

exports[`dont explode on voids: undefined 1`] = `
{
  "debug": {
    "err": "undefined",
    "typeofErr": "undefined",
  },
  "message": "undefined",
  "name": "Error",
}
`;
